Fixed scrollbar

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,3 +8,11 @@
 .Toastify__toast-container--top-right {
   --toastify-font-family: "Montserrat";
 }
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.hide-scrollbar {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
